# deterministic-methods-optimal-quantization

./: .gitignore  README.md  gaussian_quantization.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: generate-notebook-plots.yml
demos/univariate/: build_graph.py  build_quantizer.py  normal_lloyd_10.txt  normal_mfclvq_10.txt  normal_nr_10.txt
notebooks/: exponential.ipynb  lognormal.ipynb  normal.ipynb  normal_hessian_conditioning.ipynb  plots.md  uniform.ipynb
scripts/: run_notebooks.sh  sanitize_notebooks.py
univariate/: exponential_quantization.py  lognormal_quantization.py  normal_quantization.py  uniform_quantization.py  voronoi_quantization.py
univariate/demos/: build_graph.py  build_quantizer.py  optimizer_comparison.py
univariate/demos/distortions/: exponential_lloyd_10.txt  exponential_lloyd_50.txt  exponential_mfclvq_10.txt  exponential_mfclvq_50.txt  exponential_nr_10.txt  exponential_nr_50.txt  lognormal_lloyd_10.txt  lognormal_lloyd_50.txt  lognormal_mfclvq_10.txt  lognormal_mfclvq_50.txt  lognormal_nr_10.txt  lognormal_nr_50.txt  normal_lloyd_10.txt  normal_lloyd_50.txt  normal_mfclvq_10.txt  normal_mfclvq_50.txt  normal_nr_10.txt  normal_nr_50.txt
