[project]
name = "deterministic-methods-optimal-quantization"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Thibaut Montes", email = "montes.thibaut@gmail.com" }]
dependencies = [
    "numpy>=2.1.2,<3",
    "bokeh>=3.6,<4",
    "scipy>=1.14.1,<2",
]
